# esp32_http_server_authentication

./: .gitignore  README.md
components/http_server_authenticate/: CMakeLists.txt  Kconfig.projbuild  base64_encoding.c  http_authentication_common.c  http_basic_authentication.c  http_digest_authentication.c
components/http_server_authenticate/include/: http_authentication.h
main/: CMakeLists.txt  main.c
